# hello-django

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
