[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mike Williamson", email = "mike@korora.ca"},
]
dependencies = [
    "django>=4.1.1",
    "waitress>=2.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
